infrastructure/victoria-metrics/base/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vmagent-coredns
  namespace: kube-system
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: vmagent
      ports:
        - port: tcp-9153
  podSelector:
    matchLabels:
      k8s-app: kube-dns
  policyTypes:
    - Ingress
